tests/fixtures/positive/style/MayBeConstant.kt
package style

val NAME = "hello"
val COUNT = 42
val ENABLED = true
