tests/fixtures/negative/style/MayBeConstant.kt
package style

const val NAME = "hello"
const val COUNT = 42
const val ENABLED = true
